# image_compression

./: .example.env  .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py  yasg.py
products/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py
